@@ -1,3 +1,8 @@
+2012-02-11 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/packages/dio/dio.tcl: fixing nasty bug introduced with Rivet 2.0.6. 
+    When method 'store' is updating the call to method update needs a flat 
+    list as last argument, not just a sigle valued list argument
+
 2012-12-03 Massimo Manghi <mxmanghi@apache.org>
     * doc/Makefile.am: Manual pages output encoding set to UTF-8
 
